syntax = "proto3";

package user;

import "google/protobuf/empty.proto";
option php_namespace = "Generated\\User";
option php_metadata_namespace = "Generated\\GPBMetadata";

service UserService {
  rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse) {}
  rpc CreateUser (User) returns (User) {}
  rpc UpdateUser (User) returns (User) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message GetUsersResponse {
  repeated User users = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
